--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
-name = "bl808-m0-led"
+name = "bl808-m0-blinky"
 version = "0.0.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bl808-pac = { version = "0.1.0", path = "../bl808-pac", features = ["rt"]}
+bl808-pac = { version = "0.0.0", path = "../bl808-pac", features = ["rt", "critical-section"]}
+critical-section = "1.1.1"
 panic-halt = "0.2.0"
 riscv-rt = "0.11.0"
